@@ -1,5 +1,6 @@
 
 5.2a3 -> 5.2a4:
+    - jbj: yarn: convert rpmxar refcount to usage mutex.
     - jbj: yarn: convert pgpDig refcount to usage mutex (avoid recurse deadlock).
     - jbj: yarn: convert rpmts refcount to usage mutex (avoid recurse deadlock).
     - jbj: rpmps: fix: avoid reusing items from pool for now.
